--- a/mapreduce/build.gradle
+++ b/mapreduce/build.gradle
@@ -33,6 +33,10 @@ idea {
     }
 }
 
+configurations {
+    externalLibs
+}
+
 dependencies {
 
 	// https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common
@@ -51,7 +55,7 @@ dependencies {
     implementation 'com.google.guava:guava:21.0'
 
     // https://mvnrepository.com/artifact/org.json/json
-    implementation group: 'org.json', name: 'json', version: '20211205'
+    implementation 'org.json:json:20171018'
 
     // Use JUnit test framework
     //testImplementation 'junit:junit:4.12'
@@ -59,8 +63,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.apache.mrunit:mrunit:1.1.0:hadoop2'
-}
 
+}
 
 test {
     // useJUnit()
